deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: wenli6887/p2_auth:v3
          command: ["python", "app.py"]
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 200m

---
apiVersion: v1
kind: Service
metadata:
  name: grade
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5010
      targetPort: 5010
  selector:
    app: grade
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grade
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grade
  template:
    metadata:
      labels:
        app: grade
    spec:
      containers:
      - name: grade
        image: wenli6887/p2_grade:v3
        command: ["python", "app.py"]
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-storage
        readinessProbe:
          exec:
            command: ["mysqladmin", "ping", "-h", "localhost", "-u$(MYSQL_ROOT_USERNAME)", "-p$(MYSQL_ROOT_PASSWORD)"]
          initialDelaySeconds: 10
          periodSeconds: 10
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
            - name: mongo-init-script
              mountPath: /docker-entrypoint-initdb.d/mongo-init.js
              subPath: mongo-init.js
          readinessProbe:
            exec:
              command: ["mongosh", "--eval", "db.adminCommand('ping')"]
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
        - name: mongo-init-script
          configMap:
            name: mongo-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: storage
spec:
  selector:
    app: storage
  ports:
    - protocol: TCP
      port: 5020
      targetPort: 5020
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
      - name: storage
        image: wenli6887/p2_storage:v2
        command: ["sh", "-c", "python db_manage.py drop && exec python app.py"]
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 200m        
        ports:
        - containerPort: 5020
---
apiVersion: v1
kind: Service
metadata:
  name: processing
spec:
  type: ClusterIP
  selector:
    app: processing
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processing
  template:
    metadata:
      labels:
        app: processing
    spec:
      containers:
        - name: processing
          image: wenli6887/p2_processing:v2
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: results
spec:
  type: ClusterIP
  selector:
    app: results
  ports:
    - protocol: TCP
      port: 5030
      targetPort: 5030
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: results
spec:
  replicas: 1
  selector:
    matchLabels:
      app: results
  template:
    metadata:
      labels:
        app: results
    spec:
      containers:
        - name: results
          image: wenli6887/p2_results:v2
          ports:
            - containerPort: 5030
          command: ["python", "app.py"]
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 200m
